Fixed layout on mobile, added extra contents

--- a/src/styles/Columns.module.scss
+++ b/src/styles/Columns.module.scss
@@ -47,9 +47,5 @@ They will be scrolled between using the scroll snap.
     .right {
         flex: none;
         width: 100vw;
-        transform: rotateY(180deg);
-    }
-    .container {
-        transform: rotateY(180deg);
     }
 }
