--- a/src/styles/Content.module.scss
+++ b/src/styles/Content.module.scss
@@ -1,7 +1,7 @@
-.padded {
-    padding: 1em;
+@import "./Global.scss";
 
-    h1 {
-        margin: 0px;
-    }
+.container {
+    composes: padded;
+    height: $heightAfterNavbar;
+    overflow-y: scroll;
 }
